# utilpython

./: README.md  pyproject.toml  requirement.txt  requirements.txt
app_genaiwk/: util.py  util_v2.py
