[tool.poetry]
name = "utilpython"
version = "0.1.0"
description = ""
authors = ["fllovfgv <fllovfgv@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app_genaiwk" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
google-api-python-client = "^2.164.0"
google-cloud-aiplatform = "^1.84.0"
google-cloud-discoveryengine = "^0.13.7"
elasticsearch = "^8.17.2"
google-auth = "^2.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
