[tool.poetry]
name = "utilpython"
version = "0.1.0"
description = ""
authors = ["fllovfgv <fllovfgv@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app_genaiwk" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
google-api-python-client = "^2.169.0"
google-cloud-aiplatform = "^1.92.0"
google-cloud-discoveryengine = "^0.13.8"
elasticsearch = "^9.0.1"
google-auth = "^2.40.1"
duckduckgo-search = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
