[tool.poetry]
name = "utilpython"
version = "0.1.0"
description = ""
authors = ["fllovfgv <fllovfgv@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app_genaiwk" },
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
bs4 = "^0.0.2"
google-api-python-client = "^2.176.0"
google-cloud-aiplatform = "^1.103.0"
google-cloud-discoveryengine = "^0.13.9"
elasticsearch = "^9.0.2"
google-auth = "^2.40.3"
duckduckgo-search = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
